--- a/basic_example_actually.ipynb
+++ b/basic_example_actually.ipynb
@@ -276,7 +276,7 @@
     }
    ],
    "source": [
-    "# same with placebo (don't super get this result)\n",
+    "# same with placebo (this is zero since C_other would have the maximum posterior)\n",
     "integral_estimate_placebo, standard_error_placebo = monte_carlo_integration(lambda x,y,z: integrand(x, placebo, y, aspirin, z, caffeine), placebo, aspirin, caffeine) # first posterior is the one you care about\n",
     "print(f\"Placebo integral: {integral_estimate_placebo}\")\n",
     "print(f\"Estimated standard error: {standard_error_placebo}\")"
