--- a/basic_example_actually.ipynb
+++ b/basic_example_actually.ipynb
@@ -111,12 +111,12 @@
    "source": [
     "### Find IsMax for each assuming uniform distribution\n",
     "\n",
-    "<u> Independence of Posteriors (mostly) </u>\n",
+    "<u> Independence of Posteriors (mostly) </u>:\n",
     "\n",
     "Suppose we have $k$ posteriors (this includes $M_{other}$, the combined posterior that anything not in our selected 'causes' was the cause). Treat each $M_i \\in \\mathcal{M}$ as a random variable.\n",
     "Then, **if the sum of upper bounds of every posterior in $\\mathcal{M}$ does not exceed 1**, we can let the first $k-1$ causes be independent (because of this upper bound, selecting *any* random posteriors within this range and adding them up will *never* exceed 1) while the last posterior, $M_{other}$, is a fully dependent random variable $M_{other} = 1-\\sum_i{M_i}$. \n",
     "\n",
-    "<u> Pr(IsMax(M_i)) is just expected value of an indicator function </u>\n",
+    "<u> Pr(IsMax(M_i)) is just expected value of an indicator function </u>:\n",
     "\n",
     "For simplicity let $X$, $Y$, $Z$, ... be the chosen (independent) posterior random variables, and let $x$, $y$, and $z$ be the specific values they take on. Also, suppose we are finding the probability that $X$ is the maximum posterior. Then, let this be the indicator function that x is the maximum.\n",
     "$$\n",
