cleanup and more descriptions

--- a/basic_example_actually.ipynb
+++ b/basic_example_actually.ipynb
@@ -736,7 +736,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Note that 'caffeine' has an error rate of 1 since 'caffeine' can never be the maximum posterior according to the set posterior bounds for this observation vector."
+    "Referring to the diagram of posterior bounds, causes \"aspirin\" and \"placebo\" have error rates around 50% because they are tied winners with close midpoints, and so either cause may be the true maximum posterior. Caffeine has an extremely high error rate because if it is contained inside its 95% bounds, it has no chance of being the maximum posterior."
    ]
   },
   {
@@ -752,15 +752,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 207,
+   "execution_count": 210,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "General upper bounds:  {'aspirin': 0.6220417051539997, 'caffeine': 1.0, 'placebo': 0.5787881824015}\n",
-      "General lower bounds:  {'aspirin': 0.47941670515399964, 'caffeine': 0.8573749999999999, 'placebo': 0.4361631824014999}\n"
+      "General upper bounds of: [1, 0]\n",
+      " {'aspirin': 0.6220417051539997, 'caffeine': 1.0, 'placebo': 0.5787881824015}\n",
+      "General lower bounds: [1, 0]\n",
+      " {'aspirin': 0.47941670515399964, 'caffeine': 0.8573749999999999, 'placebo': 0.4361631824014999}\n"
      ]
     }
    ],
@@ -772,112 +774,117 @@
     "general_lower = {key : gamma_bound*Q_CONFIDENCE**k for key, gamma_bound in gamma_upper.items()}\n",
     "\n",
     "\n",
-    "print(\"General upper bounds: \", general_upper)\n",
-    "print(\"General lower bounds: \", general_lower)\n"
+    "print(f\"General upper bounds of: {[pill, relief]}\\n\", general_upper)\n",
+    "print(f\"General lower bounds: {[pill, relief]}\\n\", general_lower)\n"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": []
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can do the same for all other observation vectors"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 220,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_general_bounds(pill, relief):\n",
+    "    gamma_upper = {\n",
+    "        \"aspirin\"  : ber_upper*ismax_aspirin + \n",
+    "                    (1-aspirin.posteriors[pill][relief].lower)*(1-ismax_aspirin),\n",
+    "        \"caffeine\" : ber_upper*ismax_caffeine + \n",
+    "                    (1-caffeine.posteriors[pill][relief].lower)*(1-ismax_caffeine),\n",
+    "        \"placebo\"  : ber_upper*ismax_placebo + \n",
+    "                    (1-placebo.posteriors[pill][relief].lower)*(1-ismax_placebo),\n",
+    "        } \n",
+    "\n",
+    "    gamma_lower = {\n",
+    "        \"aspirin\"  : ber_lower*ismax_aspirin + \n",
+    "                    (1-aspirin.posteriors[pill][relief].upper)*(1-ismax_aspirin),\n",
+    "        \"caffeine\" : ber_lower*ismax_caffeine + \n",
+    "                    (1-caffeine.posteriors[pill][relief].upper)*(1-ismax_caffeine),\n",
+    "        \"placebo\"  : ber_lower*ismax_placebo + \n",
+    "                    (1-placebo.posteriors[pill][relief].upper)*(1-ismax_placebo),\n",
+    "        } \n",
+    "\n",
+    "\n",
+    "    k = 3 # there are 3 selected causes\n",
+    "    general_upper = {key : 1-(Q_CONFIDENCE**k)*(1-gamma_bound) for key, gamma_bound in gamma_upper.items()}\n",
+    "\n",
+    "    general_lower = {key : gamma_bound*Q_CONFIDENCE**k for key, gamma_bound in gamma_upper.items()}\n",
+    "\n",
+    "\n",
+    "    print(f\"General upper bounds of {[pill, relief]}\\n\", general_upper)\n",
+    "    print(f\"General lower bounds {[pill, relief]}\\n\", general_lower)\n",
+    "    return # general_upper, general_lower"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 221,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "{'aspirin': 0.5591680479999996}"
-      ]
-     },
-     "execution_count": 196,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "General upper bounds of [0, 0]\n",
+      " {'aspirin': 0.6922070116839998, 'caffeine': 0.9428416666666667, 'placebo': 0.7575573379385001}\n",
+      "General lower bounds [0, 0]\n",
+      " {'aspirin': 0.5495820116839996, 'caffeine': 0.8002166666666666, 'placebo': 0.6149323379385}\n"
+     ]
     }
    ],
    "source": [
-    "gamma_upper"
+    "get_general_bounds(0,0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 222,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "General upper bounds of [0, 1]\n",
+      " {'aspirin': 0.7000031568539997, 'caffeine': 0.9142625, 'placebo': 0.7612056880515}\n",
+      "General lower bounds [0, 1]\n",
+      " {'aspirin': 0.5573781568539996, 'caffeine': 0.7716374999999999, 'placebo': 0.6185806880514999}\n"
+     ]
+    }
+   ],
    "source": [
-    "[EVIDENCE_DIST[i][j] for i in [0,1] for j in [0,1]]"
+    "get_general_bounds(0,1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 223,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "General upper bounds of [1, 1]\n",
+      " {'aspirin': 0.6064494148139998, 'caffeine': 0.99142625, 'placebo': 0.7557331628820001}\n",
+      "General lower bounds [1, 1]\n",
+      " {'aspirin': 0.4638244148139997, 'caffeine': 0.8488012499999998, 'placebo': 0.613108162882}\n"
+     ]
+    }
+   ],
    "source": [
-    "1-(0.4546162000000011 + 0.3616029999999996)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "1-(0.5981094 + 0.12142870000000013)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Ignore everything below from here (Rough work)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "result"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "This was the scipy method for calculating probability of aspirin, it's more accurate apparent"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "result/((caffeine.upper-caffeine.lower)*(aspirin.upper-aspirin.lower)*(placebo.upper-placebo.lower))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "error"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "1/8"
+    "get_general_bounds(1,1)"
    ]
   }
  ],
