made displays nicer:

--- a/basic_example_actually.ipynb
+++ b/basic_example_actually.ipynb
@@ -1005,16 +1005,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 617,
+   "execution_count": 624,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "General upper bounds of: [1, 0]\n",
+      "General error upper bounds of: [1, 0]\n",
       " {'aspirin': 0.6358043628403484, 'caffeine': 0.9908546666666667, 'placebo': 0.7054426482659213}\n",
-      "General lower bounds: [1, 0]\n",
+      "General error lower bounds: [1, 0]\n",
       " {'aspirin': 0.21795061071087382, 'caffeine': 0.8002166666666666, 'placebo': 0.4819811506341199}\n"
      ]
     }
@@ -1027,8 +1027,8 @@
     "general_lower = {key : gamma_bound*Q_CONFIDENCE**k for key, gamma_bound in gamma_lower.items()}\n",
     "\n",
     "\n",
-    "print(f\"General upper bounds of: {[pill, relief]}\\n\", general_upper)\n",
-    "print(f\"General lower bounds: {[pill, relief]}\\n\", general_lower)\n"
+    "print(f\"General error upper bounds of: {[pill, relief]}\\n\", general_upper)\n",
+    "print(f\"General error lower bounds: {[pill, relief]}\\n\", general_lower)\n"
    ]
   },
   {
@@ -1040,7 +1040,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 618,
+   "execution_count": 659,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1069,25 +1069,29 @@
     "\n",
     "    general_lower = {key : gamma_bound*Q_CONFIDENCE**k for key, gamma_bound in gamma_lower.items()}\n",
     "\n",
-    "\n",
-    "    print(f\"General upper bounds of {[pill, relief]}\\n\", general_upper)\n",
-    "    print(f\"General lower bounds {[pill, relief]}\\n\", general_lower)\n",
-    "    return # general_upper, general_lower"
+    "    for post in [\"caffeine\", \"placebo\", \"aspirin\"]:\n",
+    "        lower = \"{:2f}\".format(general_lower[post])\n",
+    "        upper = \"{:2f}\".format(general_upper[post])\n",
+    "        print(f\"Selecting posterior `{post}` has error rate bounds: ({lower}, {upper})\")\n",
+    "    # print(f\"General error upper bounds of {[pill, relief]}\")\n",
+    "    # for post, prob in general_upper.items():\n",
+    "    #     print(f\"Selecting posterior `{post}` has \")\n",
+    "    # print(f\"General error lower bounds {[pill, relief]}\\n\", general_lower)\n",
+    "    # return # general_upper, general_lower"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 619,
+   "execution_count": 660,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "General upper bounds of [0, 0]\n",
-      " {'aspirin': 0.6641589119805563, 'caffeine': 0.45128, 'placebo': 0.9568743623392884}\n",
-      "General lower bounds [0, 0]\n",
-      " {'aspirin': 0.25595155285754423, 'caffeine': 0.14289583333333328, 'placebo': 0.7385441241783721}\n"
+      "Selecting posterior `caffeine` has error rate bounds: (0.142896, 0.451280)\n",
+      "Selecting posterior `placebo` has error rate bounds: (0.738544, 0.956874)\n",
+      "Selecting posterior `aspirin` has error rate bounds: (0.255952, 0.664159)\n"
      ]
     }
    ],
@@ -1097,17 +1101,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 605,
+   "execution_count": 661,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "General upper bounds of [0, 1]\n",
-      " {'aspirin': 0.6622880963671818, 'caffeine': 0.5061520000000002, 'placebo': 0.9589268661276424}\n",
-      "General lower bounds [0, 1]\n",
-      " {'aspirin': 0.5196630963671818, 'caffeine': 0.363527, 'placebo': 0.8163018661276423}\n"
+      "Selecting posterior `caffeine` has error rate bounds: (0.171475, 0.506152)\n",
+      "Selecting posterior `placebo` has error rate bounds: (0.743675, 0.958927)\n",
+      "Selecting posterior `aspirin` has error rate bounds: (0.252444, 0.662288)\n"
      ]
     }
    ],
@@ -1117,17 +1120,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 606,
+   "execution_count": 662,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "General upper bounds of [1, 1]\n",
-      " {'aspirin': 0.6384351972966564, 'caffeine': 0.945128, 'placebo': 0.9581571772070097}\n",
-      "General lower bounds [1, 1]\n",
-      " {'aspirin': 0.49581019729665626, 'caffeine': 0.8025029999999999, 'placebo': 0.8155321772070095}\n"
+      "Selecting posterior `caffeine` has error rate bounds: (0.737342, 0.945128)\n",
+      "Selecting posterior `placebo` has error rate bounds: (0.743675, 0.958157)\n",
+      "Selecting posterior `aspirin` has error rate bounds: (0.194565, 0.638435)\n"
      ]
     }
    ],
@@ -1145,7 +1147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 612,
+   "execution_count": 663,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1193,18 +1195,24 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "See all posterior ranges and results"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 621,
+   "execution_count": 664,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "General upper bounds of [0, 0]\n",
-      " {'aspirin': 0.6641589119805563, 'caffeine': 0.45128, 'placebo': 0.9568743623392884}\n",
-      "General lower bounds [0, 0]\n",
-      " {'aspirin': 0.25595155285754423, 'caffeine': 0.14289583333333328, 'placebo': 0.7385441241783721}\n"
+      "Selecting posterior `caffeine` has error rate bounds: (0.142896, 0.451280)\n",
+      "Selecting posterior `placebo` has error rate bounds: (0.738544, 0.956874)\n",
+      "Selecting posterior `aspirin` has error rate bounds: (0.255952, 0.664159)\n"
      ]
     },
     {
@@ -1227,17 +1235,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 620,
+   "execution_count": 665,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "General upper bounds of [0, 1]\n",
-      " {'aspirin': 0.6622880963671818, 'caffeine': 0.5061520000000002, 'placebo': 0.9589268661276424}\n",
-      "General lower bounds [0, 1]\n",
-      " {'aspirin': 0.25244377358246695, 'caffeine': 0.17147500000000004, 'placebo': 0.7436753836492571}\n"
+      "Selecting posterior `caffeine` has error rate bounds: (0.171475, 0.506152)\n",
+      "Selecting posterior `placebo` has error rate bounds: (0.743675, 0.958927)\n",
+      "Selecting posterior `aspirin` has error rate bounds: (0.252444, 0.662288)\n"
      ]
     },
     {
@@ -1260,17 +1267,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 622,
+   "execution_count": 666,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "General upper bounds of [1, 0]\n",
-      " {'aspirin': 0.6358043628403484, 'caffeine': 0.9908546666666667, 'placebo': 0.7054426482659213}\n",
-      "General lower bounds [1, 0]\n",
-      " {'aspirin': 0.21795061071087382, 'caffeine': 0.8002166666666666, 'placebo': 0.4819811506341199}\n"
+      "Selecting posterior `caffeine` has error rate bounds: (0.800217, 0.990855)\n",
+      "Selecting posterior `placebo` has error rate bounds: (0.481981, 0.705443)\n",
+      "Selecting posterior `aspirin` has error rate bounds: (0.217951, 0.635804)\n"
      ]
     },
     {
@@ -1293,17 +1299,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 623,
+   "execution_count": 667,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "General upper bounds of [1, 1]\n",
-      " {'aspirin': 0.6384351972966564, 'caffeine': 0.945128, 'placebo': 0.9581571772070097}\n",
-      "General lower bounds [1, 1]\n",
-      " {'aspirin': 0.194565415543692, 'caffeine': 0.7373424999999999, 'placebo': 0.7436753836492571}\n"
+      "Selecting posterior `caffeine` has error rate bounds: (0.737342, 0.945128)\n",
+      "Selecting posterior `placebo` has error rate bounds: (0.743675, 0.958157)\n",
+      "Selecting posterior `aspirin` has error rate bounds: (0.194565, 0.638435)\n"
      ]
     },
     {
